[package]
name = "api2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
tokio = "1"
dotenv = "0.15"
reqwest = { version = "0.11", features = [
    "json",
    "tokio-native-tls",
] } # Ensure it's compatible with tokio 1.x
serde_json = "1.0"
